<resources>
    <string name="app_name">Goevent</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="drawer_home">Main</string>
    <string name="drawer_list_of_events">Events</string>
    <string name="drawer_saved">Saved</string>
    <string name="drawer_nearby">Nearby</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_login">Login</string>
    <string name="title_activity_search">Search events</string>
    <string name="title_favorite_events">Saved events</string>

    <string name="card_item_filter">Фільтр</string>
    <string name="card_item_share">Поширити</string>
    <string name="login_password_field">Пароль</string>
    <string name="login_login_button">Логін</string>
    <string name="no_account_yet_create_one">Немає акаунту? Створи його</string>
    <string name="login_username">Логін</string>
    <string name="registration_log_in">Already have an account? Log in.</string>
    <string name="description_time">Duration time</string>
    <string name="event_map_directions">Directions</string>
    <string name="event_map_open">Open map</string>
    <string name="event_info_location">Місце</string>
    <string name="event_info_category">Категорія</string>
    <string name="registration_create">Створити</string>
    <string name="message_event_added_saved">Event saved to Favorite</string>
    <string name="message_bad_connection">Check your connection or try again later</string>
    <string name="title_detail_event">Detail event</string>
    <string name="location_field_full_format">%1$s, %2$s, %3$s</string>
    <string name="location_country_city_format">%1$s, %2$s</string>
    <string name="message_action_update">Update</string>
    <string name="title_notification_settings">Notification settings</string>
    <string name="title_settings">Settings</string>
    <string name="contact_us_button_send">Send</string>
    <string name="contact_us_title_in_text_field">Message</string>
    <string name="contact_us_your_message">Your message</string>
    <string name="message_you_have_favorite_events">You have %1$d favorite events</string>
    <string name="action_undo">UNDO</string>
    <string name="field_no_location">Location isn\'t specified</string>
    <string name="title_you_don_t_have_favorite_events">You don\'t have any favorite events yet</string>
    <string name="field_no_category">No category</string>
    <string name="action_saved">Saved</string>
    <string name="geocoding_service_not_available">Service not available</string>
    <string name="geocoding_invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="geocoding_no_address_found">No address found</string>
    <string name="geocoding_address_found">Address found</string>

    <string name="title_home">Main</string>
    <string name="title_all_category">All categories</string>
    <string name="title_favorite">Saved</string>
    <string name="title_date">Date</string>
    <string name="title_custom_date">Custom date</string>
    <string name="title_weekend">Weekend</string>
    <string name="title_tomorrow">Tomorrow</string>
    <string name="title_today">Today</string>
    <string name="title_all">All</string>
    <string name="title_explore_events">Explore events</string>
    <string name="title_events_on_weekends">Events on weekends</string>
    <string name="title_near_me">Near me</string>
    <string name="title_tickets">Get tickets</string>

    <string-array name="items_category_of_events_for_spinner">
        <item>Nightlife</item>
        <item>Shopping</item>
        <item>Music</item>
        <item>Art</item>
        <item>Food</item>
        <item>Movie</item>
        <item>Dance</item>
        <item>Festival</item>
        <item>Comedy</item>
        <item>Theater</item>
        <item>Dining</item>
        <item>Conference</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>

    <string-array name="items_date_for_spinner">
        <item>Tomorrow</item>
        <item>Today</item>
        <item>Weekend</item>
        <item>This week</item>
        <item>Set date</item>
    </string-array>

    <string-array name="items_popular_locations">
        <item>Kyiv, UA</item>
        <item>Lviv, UA</item>
        <item>Odessa, UA</item>
    </string-array>

</resources>
