<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/ic_logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_margin="15dp"
        android:hint="@string/contact_us_your_message"
        app:met_baseColor="@color/colorWhiteText"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/contact_us_title_in_text_field"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_primaryColor="@color/colorAccent"
        app:met_underlineColor="@color/colorWhiteText" />

    <Button
        android:id="@+id/contact_us_button_send"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_username_edit_text"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/contact_us_button_send" />

</RelativeLayout>